# liteviewsite

./: .Gitignore
Backend/: .env.example  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
Backend/src/: __init__.py  api_client.py  api_handler.py  db_client.py  db_handler.py
Backend/src/LiteView_Backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Frontend/: index.html  netflify.toml  package-lock.json  package.json  vite.config.js
Frontend/src/app/: About.jsx  App.jsx  Features.jsx  Navbar.jsx  api.js  main.jsx  sat_placer.jsx  satellite_visualizer.jsx
Frontend/src/styles/: Features.css  Navbar.css  about.css  home.css  index.css
